# Direct3D

./: CMakeLists.txt  CMakePresets.json
Scripts/: FetchLibraries.cmake
Source/: CMakeLists.txt  main.cpp
Source/Object/: Camera.cpp  Camera.h  DataStructures.h  Object.cpp  Object.h
Source/Render/: Renderer.cpp  Renderer.h  RendererManager.h
Source/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Source/Window/: Window.cpp  Window.h
